--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -18,7 +18,7 @@
 // 	18. Responsive changes          // 
 // 	19. Retina ready                // 
 // // // // // // // // // // // // // 
-
+//UPDATE VERSION 1.0//
 // 	1. Reset default browser styles
 @import url("../../assets/css/reset.css");
 // 	2. Colors & Typography     
